force-app/main/default/objects/BET_BDD_Supporting_Document_Map__mdt/BET_BDD_Supporting_Document_Map__mdt.object-meta.xml
<CustomObject>
    <description>This metadata contains mapping for BDD Document object. and defines relationship with BDD form fields</description>
    <label>BDD Supporting Document Map</label>
    <pluralLabel>BDD Supporting Document Map</pluralLabel>
</CustomObject>