force-app/main/default/objects/BET_BDD_Supporting_Document_Map__mdt/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <label>Section</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GT</fullName>
                <default>true</default>
                <label>GoldTier</label>
            </value>
            <value>
                <fullName>MDN</fullName>
                <label>Master Data Navigator</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>