force-app/main/default/objects/BET_BDD_Supporting_Document_Map__mdt/fields/Source_ShortName__c.field-meta.xml
<CustomField>
    <fullName>Source_ShortName__c</fullName>
    <label>Source Short Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Orbis</fullName>
            </value>
            <value>
                <fullName>Bankers</fullName>
            </value>
            <value>
                <fullName>LN</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>BA</fullName>
                <isActive>false</isActive>
                <label>BA</label>
            </value>
            <value>
                <fullName>OR</fullName>
                <isActive>false</isActive>
                <label>OR</label>
            </value>
            <value>
                <fullName>OT</fullName>
                <isActive>false</isActive>
                <label>OT</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>