force-app/main/default/objects/BET_BDD_Supporting_Document_Map__mdt/listViews/Document_Matrix.listView-meta.xml
<ListView>
    <fullName>Document_Matrix</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Region__c</columns>
    <columns>Section__c</columns>
    <columns>Document_Category__c</columns>
    <columns>Document_Type__c</columns>
    <columns>Source__c</columns>
    <columns>Source_ShortName__c</columns>
    <filterScope>Everything</filterScope>
    <label>Document Matrix</label>
    <language>en_US</language>
</ListView>